test/test_units/test_kclvm/test_types/invalid_test_data/type_as/type_as_0.k
import pkg

data: int = pkg.data as float
